version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/Table/FixedWidthImportSettings.rst.txt
.. vale off



:class:`FixedWidthImportSettings`
=================================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.Table.FixedWidthImportSettings

   Bases: :py:obj:`object`


   
    defines how to import data from a delimited source
   for tabular data.
















   ..
       !! processed by numpydoc !!




.. py:currentmodule:: FixedWidthImportSettings

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GenerateFromComImportSettings`
            - GenerateFromComImportSettings method.
          * - :py:attr:`~SaveToComImportSettings`
            - SaveToComImportSettings method.


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Clear`
            - 
          * - :py:attr:`~GetEnumerator`
            - 
          * - :py:attr:`~RemoveAt`
            - Removes the import definition at the specified index.
          * - :py:attr:`~UseColumn`
            - Add a column to be imported from the specified data source column index and configured


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ColumnWidths`
            - Gets or sets the specified column widths.
          * - :py:attr:`~Count`
            - Gets the number of column definitions.
          * - :py:attr:`~Format`
            - Gets the existing corresponding format.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~PathType`
            - Gets or sets the type of URI provided for Table import.
          * - :py:attr:`~SkipFooter`
            - Gets or sets the number of rows to ignore at the end of the file during import.
          * - :py:attr:`~SkipRows`
            - Gets or sets the number of rows to skip over at the start of the file during import.







Property detail
---------------
.. py:property:: ColumnWidths
   :type: Optional[Any]


   
   Gets or sets the specified column widths.
   When setting, The value provided to  may be either:

       A `string` using Fortran-esque fixed-format specifications. This is similar to the
       “User-Defined” format specifier for External Data as described in the product
       documentation. Note, however, that regardless of the format specifier all imported
       columns WILL be interpreted using the .NET command `double.TryParse()` to support
       the requirements of the underlying variable data for Table.

       An  containing the widths of each column. Negative
       values may be specified to define a negated width, meaning ‘-2’ would be equivalent
       to the fixed-width string specification ’2X’.















   ..
       !! processed by numpydoc !!

.. py:property:: Count
   :type: Optional[int]


   
   Gets the number of column definitions.
















   ..
       !! processed by numpydoc !!

.. py:property:: Format
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.Table.ImportFormat]


   
   Gets the existing corresponding format.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.Mechanical.Table.ColumnarDataImportDefinition]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: PathType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.Common.PathType]


   
   Gets or sets the type of URI provided for Table import.
   Default: 
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipFooter
   :type: Optional[int]


   
   Gets or sets the number of rows to ignore at the end of the file during import.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipRows
   :type: Optional[int]


   
   Gets or sets the number of rows to skip over at the start of the file during import.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Clear() -> None
   

.. py:method:: GenerateFromComImportSettings(importSettings: Ansys.Common.Interop.DSObjects.IDSTableImportSettingsFixedWidth) -> Ansys.Mechanical.Table.ImportSettingsBase
   :classmethod:


   
   GenerateFromComImportSettings method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Iterator[Ansys.Mechanical.Table.ColumnarDataImportDefinition]
   

.. py:method:: RemoveAt(index: int) -> None

   
   Removes the import definition at the specified index.

   ..
       !! processed by numpydoc !!

.. py:method:: SaveToComImportSettings(importSettings: Ansys.Mechanical.Table.FixedWidthImportSettings) -> Ansys.Common.Interop.DSObjects.IDSTableImportSettingsBase
   :classmethod:


   
   SaveToComImportSettings method.

   ..
       !! processed by numpydoc !!

.. py:method:: UseColumn(index: int, variableType: Ansys.Mechanical.DataModel.MechanicalEnums.Table.VariableType, variableClassification: Ansys.Mechanical.DataModel.MechanicalEnums.Table.VariableClassification, unit: str, name: str) -> Ansys.Mechanical.Table.ColumnarDataSourceBase

.. code-block:: text

   Add a column to be imported from the specified data source column index and configured
   as the specified variable type. The order in which columns are added determines their
   order in the data imported to .

   If unit is `null`, the default unit (in the active unit system) for the specified
   variable type will be assumed during import.

   If name is `null` or empty, a unique name will be generated from the specified
   variableType during import.

   A reference to the instance is returned so that invocations can be chained together.
..
       !! processed by numpydoc !!



.. vale on